Updated asmdef to CometPeak.LuaScriptAssets

--- a/Assets/Editor/CometPeak.LuaScriptAssets.asmdef
+++ b/Assets/Editor/CometPeak.LuaScriptAssets.asmdef
@@ -1,5 +1,6 @@
 {
-    "name": "LuaScriptsSupportEditor",
+    "name": "CometPeak.LuaScriptAssets",
+    "rootNamespace": "",
     "references": [],
     "includePlatforms": [
         "Editor"
