--- a/Assets/Editor/2kPS.LuaScriptAssets.asmdef
+++ b/Assets/Editor/2kPS.LuaScriptAssets.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "CometPeak.LuaScriptAssets",
+    "name": "PS2k.LuaScriptAssets",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [
